# server-backend

./: .copier-answers.yml  .isort.cfg  .pre-commit-config.yaml  .travis.yml  README.md  requirements.txt  test-requirements.txt
base_dav/: README.rst  __init__.py  __manifest__.py
base_default_lang_translate/: README.rst  __manifest__.py
base_external_api/: README.rst  __init__.py  __manifest__.py
base_external_api_ftp/: __init__.py  __manifest__.py
base_external_dbsource/: README.rst  __manifest__.py
base_external_dbsource_firebird/: __manifest__.py
base_external_dbsource_mssql/: README.rst  __manifest__.py
base_external_dbsource_mysql/: README.rst  __manifest__.py
base_external_dbsource_sap_hana/: README.rst  __manifest__.py
base_external_dbsource_sqlite/: README.rst  __manifest__.py
base_external_system/: README.rst  __init__.py  __manifest__.py
base_external_system_ftp/: __init__.py  __manifest__.py
base_external_system_http/: README.rst  __init__.py  __manifest__.py
base_external_system_ms_client_assertion/: README.rst  __manifest__.py
base_external_system_oauth/: README.rst  __manifest__.py
base_global_discount/: README.rst  __manifest__.py
base_group_backend/: README.rst  __manifest__.py
base_ical/: README.rst  __manifest__.py
base_import_match/: README.rst  __init__.py  __manifest__.py
base_module_pip/: __manifest__.py
base_portal_type/: README.rst  __manifest__.py
base_suspend_security/: README.rst  __manifest__.py  base_suspend_security.py
gitlab/: README.rst  (+2 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+913 files in other folders)
