[project]
name = "odoo-addons-oca-server-backend"
version = "17.0.20240309.0"
dependencies = [
    "odoo-addon-base_user_role>=17.0dev,<17.1dev",
    "odoo-addon-base_user_role_company>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
