[project]
name = "odoo-addons-oca-server-backend"
version = "17.0.20240724.1"
dependencies = [
    "odoo-addon-base_external_dbsource>=17.0dev,<17.1dev",
    "odoo-addon-base_external_dbsource_sqlite>=17.0dev,<17.1dev",
    "odoo-addon-base_user_role>=17.0dev,<17.1dev",
    "odoo-addon-base_user_role_company>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
